tests/files/lexer_tests/should_fail/051.cmdr
// Illegal character in variable name (ascii 18)
myvar = 18;